# nvim.rs

./: -  .gitattributes  .gitconfig  .gitignore  .swp  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  asan.just  build.rs  flake.nix  justfile  lib.rs  run-result  test_static  treefmt.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: regexp_compile.rs  regexp_match.rs
nvim.rs/: Cargo.toml  build.rs  lib.rs
nvim.rs/src/cjson/: fpconv.rs  lua_cjson.rs  strbuf.rs
nvim.rs/src/mpack/: conv.rs  lmpack.rs  mpack_core.rs  object.rs  rpc.rs
nvim.rs/src/nvim/: arabic.rs  arglist.rs  autocmd.rs  base64.rs  buffer.rs  buffer_updates.rs  bufwrite.rs  change.rs  channel.rs  charset.rs  clipboard.rs  cmdexpand.rs  cmdhist.rs  context.rs  cursor.rs  cursor_shape.rs  debugger.rs  decoration.rs  decoration_provider.rs  diff.rs  digraph.rs  drawline.rs  drawscreen.rs  edit.rs  eval.rs  ex_cmds.rs  ex_cmds2.rs  ex_docmd.rs  ex_eval.rs  ex_getln.rs  ex_session.rs  extmark.rs  file_search.rs  fileio.rs  fold.rs  fuzzy.rs  garray.rs  getchar.rs  grid.rs  hashtab.rs  (+62 more)
nvim.rs/src/nvim/api/: autocmd.rs  buffer.rs  command.rs  deprecated.rs  events.rs  extmark.rs  options.rs  tabpage.rs  ui.rs  vim.rs  vimscript.rs  win_config.rs  window.rs
nvim.rs/src/nvim/eval/: buffer.rs  decode.rs  (+11 more)
nvim.rs/src/xdiff/: xdiffi.rs  xemit.rs  xhistogram.rs  xpatience.rs  xprepare.rs  xutils.rs
src/nvim-rs/: Cargo.toml  build.rs  cbindgen.toml
src/nvim-rs/api/: Cargo.toml
src/nvim-rs/arabic/: Cargo.toml
src/nvim-rs/arglist/: Cargo.toml
src/nvim-rs/ascii/: Cargo.toml
src/nvim-rs/autocmd/: Cargo.toml
src/nvim-rs/buffer/: Cargo.toml
src/nvim-rs/buffer_updates/: Cargo.toml
src/nvim-rs/bufwrite/: Cargo.toml
src/nvim-rs/change/: Cargo.toml
src/nvim-rs/channel/: Cargo.toml
src/nvim-rs/charset/: Cargo.toml
src/nvim-rs/clipboard/: Cargo.toml
src/nvim-rs/cmdexpand/: Cargo.toml
src/nvim-rs/cmdhist/: Cargo.toml
src/nvim-rs/cmdline/: Cargo.toml
src/nvim-rs/collections/: Cargo.toml
src/nvim-rs/compositor/: Cargo.toml
src/nvim-rs/context/: Cargo.toml
src/nvim-rs/cursor/: Cargo.toml
src/nvim-rs/cursor_shape/: Cargo.toml
src/nvim-rs/debugger/: Cargo.toml
src/nvim-rs/decoration/: Cargo.toml
src/nvim-rs/decoration_provider/: Cargo.toml
src/nvim-rs/dict/: Cargo.toml
src/nvim-rs/diff/: Cargo.toml
src/nvim-rs/digraph/: Cargo.toml
src/nvim-rs/drawline/: Cargo.toml
src/nvim-rs/drawscreen/: Cargo.toml
src/nvim-rs/edit/: Cargo.toml
src/nvim-rs/encoding/: Cargo.toml
src/nvim-rs/eval/: Cargo.toml
src/nvim-rs/eval_codec/: Cargo.toml
src/nvim-rs/eval_exec/: Cargo.toml
src/nvim-rs/event/: Cargo.toml
src/nvim-rs/ex_cmds/: Cargo.toml
src/nvim-rs/ex_cmds2/: Cargo.toml
src/nvim-rs/ex_cmds_types/: Cargo.toml
src/nvim-rs/ex_docmd/: Cargo.toml  build.rs
src/nvim-rs/ex_eval/: Cargo.toml
src/nvim-rs/extmark/: Cargo.toml
src/nvim-rs/fileio/: Cargo.toml
src/nvim-rs/filesearch/: Cargo.toml
src/nvim-rs/fold/: Cargo.toml
src/nvim-rs/funcall/: Cargo.toml
src/nvim-rs/fuzzy/: Cargo.toml
src/nvim-rs/getchar/: Cargo.toml
src/nvim-rs/grid/: Cargo.toml
src/nvim-rs/help/: Cargo.toml
src/nvim-rs/highlight/: Cargo.toml
src/nvim-rs/highlight_group/: Cargo.toml
src/nvim-rs/indent/: Cargo.toml
src/nvim-rs/indent_c/: Cargo.toml
src/nvim-rs/input/: Cargo.toml
src/nvim-rs/insexpand/: Cargo.toml
src/nvim-rs/keycodes/: Cargo.toml
src/nvim-rs/linematch/: Cargo.toml
src/nvim-rs/list/: Cargo.toml
src/nvim-rs/log/: Cargo.toml
src/nvim-rs/lua/: Cargo.toml
src/nvim-rs/main/: Cargo.toml
src/nvim-rs/mapping/: Cargo.toml
src/nvim-rs/mark/: Cargo.toml
src/nvim-rs/marktree/: Cargo.toml
src/nvim-rs/match/: Cargo.toml
src/nvim-rs/math/: Cargo.toml  build.rs  cbindgen.toml
src/nvim-rs/mbyte/: Cargo.toml
src/nvim-rs/memfile/: Cargo.toml
src/nvim-rs/memline/: Cargo.toml
src/nvim-rs/memory/: Cargo.toml
src/nvim-rs/memutil/: Cargo.toml
src/nvim-rs/menu/: Cargo.toml
src/nvim-rs/message/: Cargo.toml
src/nvim-rs/mouse/: Cargo.toml
src/nvim-rs/move/: Cargo.toml
src/nvim-rs/msgpack/: Cargo.toml
src/nvim-rs/msgpack_rpc/: Cargo.toml
src/nvim-rs/normal/: Cargo.toml
src/nvim-rs/ops/: Cargo.toml
src/nvim-rs/option/: Cargo.toml
src/nvim-rs/optionstr/: Cargo.toml
src/nvim-rs/os/: Cargo.toml
src/nvim-rs/path/: Cargo.toml
src/nvim-rs/plines/: Cargo.toml
src/nvim-rs/popupmenu/: Cargo.toml
src/nvim-rs/profile/: Cargo.toml
src/nvim-rs/quickfix/: Cargo.toml
src/nvim-rs/regexp/: Cargo.toml
src/nvim-rs/register/: Cargo.toml
src/nvim-rs/runtime/: Cargo.toml
src/nvim-rs/search/: Cargo.toml
src/nvim-rs/session/: Cargo.toml
src/nvim-rs/shada/: Cargo.toml
src/nvim-rs/sign/: Cargo.toml
src/nvim-rs/spell/: Cargo.toml
src/nvim-rs/src/: lib.rs
src/nvim-rs/state/: Cargo.toml
src/nvim-rs/statusline/: Cargo.toml
src/nvim-rs/strings/: Cargo.toml
src/nvim-rs/syntax/: Cargo.toml
src/nvim-rs/tag/: Cargo.toml
src/nvim-rs/terminal/: Cargo.toml
src/nvim-rs/test/: compare_charset.c  compare_math.c  compare_mbyte.c  compare_path.c  compare_regexp.c  compare_strings.c  regexp_corpus.json  regexp_patterns.txt  shadow_regexp.md  test_math.c
src/nvim-rs/testing/: Cargo.toml
src/nvim-rs/textformat/: Cargo.toml
src/nvim-rs/textobject/: Cargo.toml
src/nvim-rs/treesitter/: Cargo.toml
src/nvim-rs/tui/: Cargo.toml
src/nvim-rs/typval/: Cargo.toml
src/nvim-rs/ugrid/: Cargo.toml
src/nvim-rs/ui/: Cargo.toml
src/nvim-rs/ui_client/: Cargo.toml
src/nvim-rs/undo/: Cargo.toml
src/nvim-rs/unpacker/: Cargo.toml
src/nvim-rs/usercmd/: Cargo.toml
src/nvim-rs/userfunc/: Cargo.toml
src/nvim-rs/utf8proc/: Cargo.toml
src/nvim-rs/vars/: Cargo.toml
src/nvim-rs/version/: Cargo.toml  build.rs
src/nvim-rs/viewport/: Cargo.toml
src/nvim-rs/viml_parser/: Cargo.toml
src/nvim-rs/vterm/: Cargo.toml
src/nvim-rs/window/: Cargo.toml
src/nvim-rs/winfloat/: Cargo.toml
tools/globalize/: Cargo.toml
tools/globalize/src/: main.rs
tools/unify/: Cargo.toml  domains.tsv  gen-domains.py
tools/unify/src/: main.rs
(+2027 files in other folders)
