[workspace]
resolver = "2"
members = [
    "src/nvim-rs",
    "src/nvim-rs/api",
    "src/nvim-rs/arabic",
    "src/nvim-rs/ascii",
    "src/nvim-rs/autocmd",
    "src/nvim-rs/buffer",
    "src/nvim-rs/buffer_updates",
    "src/nvim-rs/bufwrite",
    "src/nvim-rs/charset",
    "src/nvim-rs/cmdexpand",
    "src/nvim-rs/cmdline",
    "src/nvim-rs/cmdhist",
    "src/nvim-rs/cursor",
    "src/nvim-rs/cursor_shape",
    "src/nvim-rs/collections",
    "src/nvim-rs/compositor",
    "src/nvim-rs/context",
    "src/nvim-rs/decoration",
    "src/nvim-rs/dict",
    "src/nvim-rs/diff",
    "src/nvim-rs/digraph",
    "src/nvim-rs/drawline",
    "src/nvim-rs/drawscreen",
    "src/nvim-rs/encoding",
    "src/nvim-rs/eval_codec",
    "src/nvim-rs/event",
    "src/nvim-rs/ex_docmd",
    "src/nvim-rs/edit",
    "src/nvim-rs/ex_eval",
    "src/nvim-rs/extmark",
    "src/nvim-rs/fileio",
    "src/nvim-rs/fold",
    "src/nvim-rs/funcall",
    "src/nvim-rs/fuzzy",
    "src/nvim-rs/getchar",
    "src/nvim-rs/grid",
    "src/nvim-rs/help",
    "src/nvim-rs/highlight",
    "src/nvim-rs/highlight_group",
    "src/nvim-rs/indent",
    "src/nvim-rs/indent_c",
    "src/nvim-rs/insexpand",
    "src/nvim-rs/keycodes",
    "src/nvim-rs/linematch",
    "src/nvim-rs/list",
    "src/nvim-rs/lua",
    "src/nvim-rs/main",
    "src/nvim-rs/mapping",
    "src/nvim-rs/mark",
    "src/nvim-rs/marktree",
    "src/nvim-rs/match",
    "src/nvim-rs/math",
    "src/nvim-rs/mbyte",
    "src/nvim-rs/memline",
    "src/nvim-rs/memory",
    "src/nvim-rs/memutil",
    "src/nvim-rs/menu",
    "src/nvim-rs/message",
    "src/nvim-rs/mouse",
    "src/nvim-rs/move",
    "src/nvim-rs/msgpack",
    "src/nvim-rs/normal",
    "src/nvim-rs/ops",
    "src/nvim-rs/option",
    "src/nvim-rs/os",
    "src/nvim-rs/path",
    "src/nvim-rs/plines",
    "src/nvim-rs/popupmenu",
    "src/nvim-rs/profile",
    "src/nvim-rs/quickfix",
    "src/nvim-rs/register",
    "src/nvim-rs/regexp",
    "src/nvim-rs/search",
    "src/nvim-rs/sign",
    "src/nvim-rs/shada",
    "src/nvim-rs/spell",
    "src/nvim-rs/statusline",
    "src/nvim-rs/syntax",
    "src/nvim-rs/strings",
    "src/nvim-rs/tag",
    "src/nvim-rs/textformat",
    "src/nvim-rs/textobject",
    "src/nvim-rs/eval",
    "src/nvim-rs/eval_exec",
    "src/nvim-rs/ex_cmds",
    "src/nvim-rs/utf8proc",
    "src/nvim-rs/version",
    "src/nvim-rs/viewport",
    "src/nvim-rs/window",
    "src/nvim-rs/terminal",
    "src/nvim-rs/testing",
    "src/nvim-rs/state",
    "src/nvim-rs/unpacker",
    "src/nvim-rs/tui",
    "src/nvim-rs/typval",
    "src/nvim-rs/ugrid",
    "src/nvim-rs/undo",
    "src/nvim-rs/userfunc",
    "src/nvim-rs/vars",
    "src/nvim-rs/vterm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neovim/neovim"

[workspace.lints.rust]
# Note: unsafe_code is allowed at crate level for FFI, but should be minimized

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
