[package]
name = "nvim-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# The regexp crate depends on ~100+ C accessor functions via FFI.
# Standalone cargo-fuzz cannot link these. Use `just regexp-fuzz` instead.
# nvim-regexp = { path = "../src/nvim-rs/regexp" }

[[bin]]
name = "regexp_compile"
path = "fuzz_targets/regexp_compile.rs"
doc = false

[[bin]]
name = "regexp_match"
path = "fuzz_targets/regexp_match.rs"
doc = false
