[workspace]
members = [
]
[package]
name = "c2rust_neovim"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "c2rust_neovim"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
c2rust-bitfields = { path = "/home/overlord/projects/immunant/c2rust/c2rust-bitfields" }
libc = "0.2"


[profile.release]
strip = "debuginfo"