[package]
name = "nvim-rs"
description = "Rust components for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
nvim-arabic = { path = "arabic" }
nvim-buffer = { path = "buffer" }
nvim-charset = { path = "charset" }
nvim-cmdhist = { path = "cmdhist" }
nvim-eval = { path = "eval" }
nvim-collections = { path = "collections" }
nvim-encoding = { path = "encoding" }
nvim-ex-docmd = { path = "ex_docmd" }
nvim-fileio = { path = "fileio" }
nvim-grid = { path = "grid" }
nvim-help = { path = "help" }
nvim-indent = { path = "indent" }
nvim-keycodes = { path = "keycodes" }
nvim-mark = { path = "mark" }
nvim-math = { path = "math" }
nvim-mbyte = { path = "mbyte" }
nvim-memutil = { path = "memutil" }
nvim-menu = { path = "menu" }
nvim-ops = { path = "ops" }
nvim-os = { path = "os" }
nvim-path = { path = "path" }
nvim-profile = { path = "profile" }
nvim-register = { path = "register" }
nvim-spell = { path = "spell" }
nvim-strings = { path = "strings" }
nvim-utf8proc = { path = "utf8proc" }
nvim-version = { path = "version" }
nvim-window = { path = "window" }

[build-dependencies]
cbindgen = "0.27"
