[package]
name = "nvim-rs"
description = "Rust components for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
nvim-api = { path = "api" }
nvim-arabic = { path = "arabic" }
nvim-ascii = { path = "ascii" }
nvim-autocmd = { path = "autocmd" }
nvim-buffer = { path = "buffer" }
nvim-charset = { path = "charset" }
nvim-cmdline = { path = "cmdline" }
nvim-cmdhist = { path = "cmdhist" }
nvim-cursor-shape = { path = "cursor_shape" }
nvim-diff = { path = "diff" }
nvim-eval = { path = "eval" }
nvim-collections = { path = "collections" }
nvim-context = { path = "context" }
nvim-encoding = { path = "encoding" }
nvim-event = { path = "event" }
nvim-ex-docmd = { path = "ex_docmd" }
nvim-ex-eval = { path = "ex_eval" }
nvim-fileio = { path = "fileio" }
nvim-getchar = { path = "getchar" }
nvim-grid = { path = "grid" }
nvim-help = { path = "help" }
nvim-insexpand = { path = "insexpand" }
nvim-indent = { path = "indent" }
nvim-keycodes = { path = "keycodes" }
nvim-lua = { path = "lua" }
nvim-mark = { path = "mark" }
nvim-math = { path = "math" }
nvim-mbyte = { path = "mbyte" }
nvim-memutil = { path = "memutil" }
nvim-menu = { path = "menu" }
nvim-msgpack = { path = "msgpack" }
nvim-ops = { path = "ops" }
nvim-os = { path = "os" }
nvim-path = { path = "path" }
nvim-profile = { path = "profile" }
nvim-register = { path = "register" }
nvim-search = { path = "search" }
nvim-spell = { path = "spell" }
nvim-strings = { path = "strings" }
nvim-utf8proc = { path = "utf8proc" }
nvim-version = { path = "version" }
nvim-window = { path = "window" }

[build-dependencies]
cbindgen = "0.27"
