[package]
name = "nvim-rs"
description = "Rust components for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
nvim-api = { path = "api" }
nvim-arabic = { path = "arabic" }
nvim-ascii = { path = "ascii" }
nvim-autocmd = { path = "autocmd" }
nvim-buffer = { path = "buffer" }
nvim-change = { path = "change" }
nvim-buffer-updates = { path = "buffer_updates" }
nvim-charset = { path = "charset" }
nvim-cmdexpand = { path = "cmdexpand" }
nvim-cmdline = { path = "cmdline" }
nvim-cmdhist = { path = "cmdhist" }
nvim-cursor = { path = "cursor" }
nvim-cursor-shape = { path = "cursor_shape" }
nvim-decoration = { path = "decoration" }
nvim-dict = { path = "dict" }
nvim-diff = { path = "diff" }
nvim-digraph = { path = "digraph" }
nvim-drawline = { path = "drawline" }
nvim-drawscreen = { path = "drawscreen" }
nvim-edit = { path = "edit" }
nvim-eval = { path = "eval" }
nvim-collections = { path = "collections" }
nvim-compositor = { path = "compositor" }
nvim-context = { path = "context" }
nvim-encoding = { path = "encoding" }
nvim-event = { path = "event" }
nvim-extmark = { path = "extmark" }
nvim-ex-docmd = { path = "ex_docmd" }
nvim-ex-cmds = { path = "ex_cmds" }
nvim-ex-eval = { path = "ex_eval" }
nvim-fileio = { path = "fileio" }
nvim-fold = { path = "fold" }
nvim-fuzzy = { path = "fuzzy" }
nvim-getchar = { path = "getchar" }
nvim-grid = { path = "grid" }
nvim-help = { path = "help" }
nvim-highlight = { path = "highlight" }
nvim-highlight-group = { path = "highlight_group" }
nvim-insexpand = { path = "insexpand" }
nvim-indent = { path = "indent" }
nvim-indent-c = { path = "indent_c" }
nvim-keycodes = { path = "keycodes" }
nvim-linematch = { path = "linematch" }
nvim-list = { path = "list" }
nvim-lua = { path = "lua" }
nvim-mapping = { path = "mapping" }
nvim-mark = { path = "mark" }
nvim-marktree = { path = "marktree" }
nvim-math = { path = "math" }
nvim-mbyte = { path = "mbyte" }
nvim-memline = { path = "memline" }
nvim-memutil = { path = "memutil" }
nvim-menu = { path = "menu" }
nvim-message = { path = "message" }
nvim-mouse = { path = "mouse" }
nvim-move = { path = "move" }
nvim-msgpack = { path = "msgpack" }
nvim-normal = { path = "normal" }
nvim-ops = { path = "ops" }
nvim-option = { path = "option" }
nvim-os = { path = "os" }
nvim-path = { path = "path" }
nvim-plines = { path = "plines" }
nvim-popupmenu = { path = "popupmenu" }
nvim-profile = { path = "profile" }
nvim-quickfix = { path = "quickfix" }
nvim-register = { path = "register" }
nvim-regexp = { path = "regexp" }
nvim-runtime = { path = "runtime" }
nvim-search = { path = "search" }
nvim-shada = { path = "shada" }
nvim-sign = { path = "sign" }
nvim-spell = { path = "spell" }
nvim-statusline = { path = "statusline" }
nvim-strings = { path = "strings" }
nvim-syntax = { path = "syntax" }
nvim-tag = { path = "tag" }
nvim-textformat = { path = "textformat" }
nvim-textobject = { path = "textobject" }
nvim-utf8proc = { path = "utf8proc" }
nvim-version = { path = "version" }
nvim-viewport = { path = "viewport" }
nvim-window = { path = "window" }
nvim-terminal = { path = "terminal" }
nvim-vterm = { path = "vterm" }
nvim-unpacker = { path = "unpacker" }
nvim-tui = { path = "tui" }
nvim-typval = { path = "typval" }
nvim-ugrid = { path = "ugrid" }
nvim-undo = { path = "undo" }
nvim-vars = { path = "vars" }

[build-dependencies]
cbindgen = "0.27"
