[package]
name = "nvim-buffer"
description = "Buffer handling utilities for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
nvim-window = { path = "../window" }
libc = "0.2"

[lints]
workspace = true
