[package]
name = "nvim-charset"
description = "Character set utilities for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
nvim-mbyte = { path = "../mbyte" }
nvim-buffer = { path = "../buffer" }

[lints]
workspace = true
