[package]
name = "nvim-cmdexpand"
description = "Command-line completion and expansion for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[lints]
workspace = true

[dependencies]
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
libc = "0.2"
nvim-window = { path = "../window" }
