[package]
name = "nvim-cmdline"
description = "Command line utilities for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
nvim-cmdexpand = { path = "../cmdexpand" }

[lints]
workspace = true
