[package]
name = "nvim-collections"
description = "Neovim data structures - growing arrays and hash tables"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
nvim-memory = { path = "../memory" }

[lints]
workspace = true
