[package]
name = "nvim-collections"
description = "Neovim data structures - growing arrays and hash tables"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
nvim-memory = { path = "../memory" }
nvim-memutil = { path = "../memutil" }
nvim-path = { path = "../path" }
nvim-strings = { path = "../strings" }
paste = "1"

[lints]
workspace = true
