[package]
name = "nvim-context"
description = "Context stack handling for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nvim-memory = { path = "../memory" }
nvim-option = { path = "../option" }
