[package]
name = "nvim-cursor"
description = "Cursor positioning and validation for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nvim-mbyte = { path = "../mbyte" }
nvim-window = { path = "../window" }
nvim-buffer = { path = "../buffer" }

[lints]
workspace = true
