[package]
name = "nvim-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diff option checking for Neovim"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
# Enable functions that require nvim_tabpage_get_diffbuf C accessor
# (not yet implemented in C codebase)
tabpage_diff = []

[dependencies]
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
libc = "0.2"

[lints]
workspace = true
