[package]
name = "nvim-drawline"
description = "Line drawing functions for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nvim-decoration = { path = "../decoration" }
nvim-grid = { path = "../grid" }
nvim-highlight = { path = "../highlight" }
nvim-window = { path = "../window" }

[lints]
workspace = true
