[package]
name = "nvim-eval-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
libc = "0.2"
nvim-collections = { path = "../collections" }
nvim-eval = { path = "../eval" }
nvim-typval = { path = "../typval" }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
