[package]
name = "nvim-event"
description = "Event loop and async I/O wrappers for Neovim C-to-Rust migration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
nvim-memory = { path = "../memory" }

[lints]
workspace = true
