[package]
name = "nvim-ex-cmds"
version = "0.1.0"
edition = "2021"
description = "Ex command implementations for Neovim"

[dependencies]
bitflags = "2"
libc = "0.2"
nvim-profile = { path = "../profile" }
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
nvim-buffer = { path = "../buffer" }
nvim-window = { path = "../window" }

[lib]
crate-type = ["rlib"]
