[package]
name = "nvim-ex-docmd"
version = "0.1.0"
edition = "2021"
description = "Ex command utilities for Neovim"
build = "build.rs"

[dependencies]
nvim-buffer = { path = "../buffer" }
nvim-normal = { path = "../normal" }
nvim-ex-eval = { path = "../ex_eval" }
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
nvim-window = { path = "../window" }

[lib]
crate-type = ["rlib"]
