[package]
name = "nvim-fold"
description = "Fold method checks and fold state queries for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
nvim-buffer = { path = "../buffer" }
nvim-charset = { path = "../charset" }
nvim-mbyte = { path = "../mbyte" }
nvim-memory = { path = "../memory" }
nvim-window = { path = "../window" }

[lints]
workspace = true
