[package]
name = "nvim-grid"
description = "Grid utilities for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nvim-arabic = { path = "../arabic" }
nvim-mbyte = { path = "../mbyte" }
nvim-window = { path = "../window" }

[lints]
workspace = true
