[package]
name = "nvim-indent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Indentation utilities for Neovim"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
nvim-ex-cmds-types = { path = "../ex_cmds_types" }
libc = "0.2"
nvim-buffer = { path = "../buffer" }
nvim-normal = { path = "../normal" }
nvim-charset = { path = "../charset" }
nvim-memory = { path = "../memory" }
nvim-window = { path = "../window" }
