[package]
name = "nvim-insexpand"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Insert-mode completion (CTRL-X) mode checking for Neovim"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
nvim-window = { path = "../window" }
nvim-buffer = { path = "../buffer" }
nvim-keycodes = { path = "../keycodes" }

[lints]
workspace = true
