[package]
name = "nvim-keycodes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keycode utilities for Neovim"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
nvim-ascii = { path = "../ascii" }
nvim-mbyte = { path = "../mbyte" }

[lints]
workspace = true
