[package]
name = "nvim-keycodes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keycode utilities for Neovim"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
nvim-ascii = { path = "../ascii" }
nvim-charset = { path = "../charset" }
nvim-mbyte = { path = "../mbyte" }
nvim-memory = { path = "../memory" }

[lints]
workspace = true
