[package]
name = "nvim-mapping"
description = "Key mapping and abbreviation functions for Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
libc = "0.2"
nvim-api = { path = "../api" }
nvim-ex-cmds-types = { path = "../ex_cmds_types" }

[dev-dependencies]
