[package]
name = "nvim-math"
description = "Math utilities for Neovim (Rust implementation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]

[build-dependencies]
cbindgen = "0.27"
